and keep track of all category-tags.
It DOES NOT substitute the  SVN log-message one should put at every
committal in the SVN repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

October 22, 2014 I. Hrivnacova (analysis-V10-00-36)
- Updated to g4tools 1.16.2 (by G. Barrand):
  modifs for example code to read csv ntuple by using ntuple_binding  
  see History_tools for complete list of modifications.
- Added writing commented header (default) for csv ntuple 
- Implemented reading csv ntuples
- Removed H1, H2, P1 dummy manager classes and H3, P3 moved in
  hbook implementation in examples
- Use kInvalidId instead of -1
- Added checks for ntupleId in RNtupleManager classes

October 22, 2014 I. Hrivnacova (analysis-V10-00-35)
- Fixed compiler warning in tools/wroot/leaf: 
  base class tools::wroot::ibo should be explicitly initialized in the copy constructor

October 21, 2014 I. Hrivnacova (analysis-V10-00-34)
- Updated to g4tools 1.16.1 (by G. Barrand):
  Fixed reading root ntuple with column of std::string type 
  by using ntuple_binding.
  see History_tools for complete list of modifications.
  
October 20, 2014 I. Hrivnacova (analysis-V10-00-33)
- Updated to g4tools 1.16.0 (by G. Barrand)
  Write/read ntuple with std::string columns,
  see History_tools for complete list of modifications.
- Implemented reading H3 for Root (now supported in tools)
- Added functions for handling ntuple columns of std::string type
- Added an option to write the Hippo header in csv ntuple output
  (default true)

October 13, 2014 I. Hrivnacova (analysis-V10-00-32)
- Fixed variable initialization in G4CsvAnalysisReader

October 13, 2014 I. Hrivnacova (analysis-V10-00-31)
- Do not include G4CsvRNtupleManager, which is not yet commited.

October 07, 2014 I. Hrivnacova (analysis-V10-00-30)