@@ -45,6 +45,15 @@ public:
 
   template <class T>
   class column : public virtual read::icolumn<T> {
+    typedef read::icolumn<T> parent;
+  public:
+    static cid id_class() {return 200+_cid(T());}
+  public: //icol
+    virtual void* cast(cid a_class) const {
+      if(void* p = cmp_cast<column>(this,a_class)) {return p;}
+      return parent::cast(a_class);
+    }
+    virtual cid id_cls() const {return id_class();}
   public: //icol
     virtual const std::string& name() const {return m_leaf.name();}
   public: //icolumn<T>
@@ -77,7 +86,7 @@ public:
   protected:
     column(const column& a_from)
     :read::intuple(a_from)
-    ,read::icolumn<T>(a_from)
+    ,parent(a_from)
     ,m_leaf(a_from.m_leaf) 
     ,m_index(a_from.m_index)
     ,m_user_var(a_from.m_user_var)
@@ -144,6 +153,15 @@ public:
 
   template <class RT,class T>
   class column_element : public virtual read::icolumn<T> {
+    typedef read::icolumn<T> parent;
+  public:
+    static cid id_class() {return 300+_cid(T());}
+  public: //icol
+    virtual void* cast(cid a_class) const {
+      if(void* p = cmp_cast<column_element>(this,a_class)) {return p;}
+      return parent::cast(a_class);
+    }
+    virtual cid id_cls() const {return id_class();}
   public: //icol
     virtual const std::string& name() const {return m_leaf.name();}
   public: //icolumn<T>
@@ -194,7 +212,7 @@ public:
     virtual ~column_element(){}
   protected:
     column_element(const column_element& a_from)
-    :read::intuple(a_from),read::icolumn<T>(a_from)
+    :read::intuple(a_from),parent(a_from)
     ,m_leaf(a_from.m_leaf) 
     ,m_index(a_from.m_index)
     ,m_be(a_from.m_be)
